welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:26: error: Unmatched closing brace '}' ignored here
}
^